--- a/vue-project/src/styles/main.scss
+++ b/vue-project/src/styles/main.scss
@@ -56,3 +56,34 @@ button {
     box-shadow: 0px 0px 10px 3px #003566;
   }
 }
+.pagination-counter {
+  font-size: 30px;
+  line-height: 30px;
+}
+.pagination {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  padding-right: 20px;
+}
+.next-button,
+.prev-button {
+  width: 90px;
+  height: 40px;
+  display: block;
+  border: 2px solid #e0be4f;
+  color: #000814;
+  background-color: #ffd60a;
+  border-radius: 17px;
+  text-decoration: none;
+  font-weight: 400;
+  line-height: 26px;
+  cursor: pointer;
+  &:hover {
+    transition: 0.5s;
+    -webkit-box-shadow: 0px 0px 10px 3px #e0be4f;
+    -moz-box-shadow: 0px 0px 10px 3px #e0be4f;
+    box-shadow: 0px 0px 10px 3px #e0be4f;
+  }
+}
